Masih harus diedit tapi udah bisa jalan

--- a/BlankNEWS/Views/Home/Search.cshtml
+++ b/BlankNEWS/Views/Home/Search.cshtml
@@ -26,7 +26,7 @@
             <font color="white">
                 <hr />
                 <h3><strong><a href="@((item as FeedItem).Uri)" style="color: rgb(88, 171, 251)"> @((item as FeedItem).Title) </a></strong></h3>
-                <p> @((item as FeedItem).Summary) </p>
+                <p> @((item as FeedItem).Content) </p>
             </font>
         }
     }
