--- a/BlankNEWS/Views/Home/Search.cshtml
+++ b/BlankNEWS/Views/Home/Search.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    ViewData["Title"] = "BlankNEWS";
+    ViewData["Title"] = "Search News";
 }
 @using SimpleFeedReader;
 
