--- a/BlankNEWS/Views/Home/About.cshtml
+++ b/BlankNEWS/Views/Home/About.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "About BlankNEWS";
 }
-<h2><font color="white">@ViewData["Title"].</font></h2>
+<h2><font color="white">@ViewData["Title"]</font></h2>
 <h3><font color="white">@ViewData["Message"]</font></h3>
 
 <font color="white">
